--- a/CreatingVirtualEnvironmentAndKernels.ipynb
+++ b/CreatingVirtualEnvironmentAndKernels.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkmpXF87JCay7aJhBhnTcy",
+      "authorship_tag": "ABX9TyOg9YXDEIPuEABnUzfzvmCJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,6 +221,44 @@
       ],
       "metadata": {
         "id": "7vJFzmDDqLsb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "\n",
+        "**Bonus: Changing or Adding the Path to Jupyter notebook for Kernels**\n",
+        "\n",
+        "\n",
+        "\n",
+        "**The `~/.condarc` configuration file**\n",
+        "\n",
+        "conda's behavior is controlled by a configuration file in your home directory called `.condarc`. The dot at the start of the name means that the file is hidden from 'ls' file listing command by default. If you have not run conda before, you won't have this file. Whether the file exists or not, the steps here will help you modify the file to work best on HiPerGator. First load of the conda environment module on HiPerGator will put the current best practice .condarc into your home directory.\n",
+        "\n",
+        "conda package cache location\n",
+        "\n",
+        "conda caches (keeps a copy) of all downloaded packages by default in the ~/.conda/pkgs directory tree. If you install a lot of packages you may end up filling up your home quota. You can change the default package cache path. To do so, add or change the pkgs_dirs setting in your ~/.condarc configuration file e.g.:\n",
+        "\n",
+        "pkgs_dirs:\n",
+        "  - /blue/mygroup/share/conda/pkgs\n",
+        "  # or alternatively: - /blue/mygroup/$USER/conda/pkgs\n",
+        "Replace mygroup with your actual group name.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "1. Loading the conda module as follows:\n",
+        "```\n",
+        "module load conda\n",
+        "```\n",
+        "2. Load `.condarc` file using **nano** as follows:\n",
+        "```\n",
+        "nano ~/.condarc\n",
+        "```\n",
+        "3. If you want to add the path, where your jupyter notebook should search for kernel. You can add now."
+      ],
+      "metadata": {
+        "id": "RAJ8ERqPG6YK"
       }
     }
   ]
